---
source: tests/snapshot_tests.rs
expression: err.to_string()
---
Parsing error:  --> 1:1
  |
1 | this is not valid DSL!!!
  | ^---
  |
  = expected file
